--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "perl -i -pe 's/tx6-cache-\\d+/tx6-cache-'\"$(date +%s)\"'/' public/service-worker.js",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "screenshot": "node scripts/screenshot.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/psimyn/tx6#readme",
   "devDependencies": {
+    "playwright": "^1.57.0",
     "vite": "^7.3.0"
   },
   "dependencies": {
